--- a/app/src/main/res/layout/fragment_start_move.xml
+++ b/app/src/main/res/layout/fragment_start_move.xml
@@ -8,13 +8,18 @@
     tools:context="com.ayvengoza.activ.letsmove.StartMoveActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/text_view"
+        android:layout_width="238dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/remove_updates_button"/>
 
     <Button
         android:id="@+id/request_updates_button"
